// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layouts Home snapshots contain data content when requesting result is not empty in desktop 1`] = `
<ul
  class="MuiGridList-root"
  style="margin: -10px;"
>
  <li
    class="MuiGridListTile-root"
    style="width: 25%; height: 270px; padding: 10px;"
  >
    <div
      class="MuiGridListTile-tile"
    >
      <img
        alt="title"
        class="WhiteHomeNotes-img"
        src="image"
      />
      <div
        class="MuiGridListTileBar-root WhiteHomeNotes-gridListTileBar WhiteHomeNotes-gridListTileBar MuiGridListTileBar-titlePositionBottom"
      >
        <div
          class="MuiGridListTileBar-titleWrap"
        >
          <div
            class="MuiGridListTileBar-title"
          >
            <div
              class="WhiteHomeNotes-title WhiteHomeNotes-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`layouts Home snapshots contain data content when requesting result is not empty in mobile 1`] = `
<ul
  class="MuiGridList-root"
  style="margin: -10px;"
>
  <li
    class="MuiGridListTile-root"
    style="width: 100%; height: 270px; padding: 10px;"
  >
    <div
      class="MuiGridListTile-tile"
    >
      <img
        alt="title"
        class="WhiteHomeNotes-img"
        src="image"
      />
      <div
        class="MuiGridListTileBar-root WhiteHomeNotes-gridListTileBar WhiteHomeNotes-gridListTileBar MuiGridListTileBar-titlePositionBottom"
      >
        <div
          class="MuiGridListTileBar-titleWrap"
        >
          <div
            class="MuiGridListTileBar-title"
          >
            <div
              class="WhiteHomeNotes-title WhiteHomeNotes-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`layouts Home snapshots contain empty content when requesting result is empty 1`] = `
<div
  class="WhiteHomeEmpty-root"
>
  <div>
    Still Empty
  </div>
  <span
    aria-label="three-wise-monkeys"
    role="img"
  >
    🙈🙉🙊
  </span>
</div>
`;

exports[`layouts Home snapshots contain loading content when requesting 1`] = `
<div
  class="WhiteHomeLoading-root"
>
  <div>
    Loading
  </div>
  <div
    class="MuiLinearProgress-root MuiLinearProgress-colorSecondary WhiteHomeLoading-linearProgress MuiLinearProgress-indeterminate"
    role="progressbar"
  >
    <div
      class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Indeterminate"
    />
    <div
      class="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorSecondary"
    />
  </div>
</div>
`;
